Dynamic load translations with specific route / WIP : contextual menu

--- a/themes/Rozier/Resources/routing/ajax.yml
+++ b/themes/Rozier/Resources/routing/ajax.yml
@@ -195,3 +195,10 @@ customFormFieldAjaxEdit:
         _controller: Themes\Rozier\AjaxControllers\AjaxCustomFormFieldsController::editAction
         _format: json
     requirements: { customFormFieldId : "[0-9]+" }
+## Translations
+ajaxTranslations:
+    path:     /translations/list
+    methods: [GET]
+    defaults:
+        _controller: Themes\Rozier\AjaxControllers\AjaxTranslationsController::listAction
+        _format: json
