--- a/themes/Rozier/package.json
+++ b/themes/Rozier/package.json
@@ -38,6 +38,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "bazinga-translator": "^2.6.5",
+    "bluebird": "^3.5.1",
     "codemirror": "^5.25.0",
     "gsap": "^1.20.3",
     "jquery-ui": "^1.12.1",
