--- a/themes/Rozier/package.json
+++ b/themes/Rozier/package.json
@@ -45,6 +45,7 @@
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
     "mousetrap": "^1.6.0",
+    "uniqid": "^4.1.1",
     "vue-cropperjs": "^2.1.0",
     "vue-js-modal": "^1.2.3",
     "vue-multiselect": "2.0.0-beta.15",
