--- a/themes/Rozier/package.json
+++ b/themes/Rozier/package.json
@@ -44,6 +44,7 @@
     "gsap": "^1.20.3",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "mousetrap": "^1.6.0",
     "uniqid": "^4.1.1",
     "vue-cropperjs": "^2.1.0",
