--- a/themes/Rozier/package.json
+++ b/themes/Rozier/package.json
@@ -37,13 +37,15 @@
     }
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.0",
     "codemirror": "^5.25.0",
+    "cssnano": "^4.1.10",
     "gsap": "^1.20.3",
     "jquery-ui": "^1.12.1",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.4",
     "mousetrap": "^1.6.0",
+    "postcss-reduce-transforms": "^4.0.2",
     "qs": "^6.5.2",
     "symfony-collection": "^2.1.26",
     "uikit": "2.27.4",
@@ -94,7 +96,7 @@
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
     "ip": "^1.1.5",
-    "less": "^2.7.3",
+    "less": "^3.9.0",
     "less-loader": "^4.0.5",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
@@ -110,13 +112,13 @@
     "shelljs": "^0.7.6",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^2.0.1",
     "vue": "2.5.9",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "2.5.9",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.1",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0"
