--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "bin-dir": "bin"
     },
     "require": {
-        "php":                                     ">=7.2",
+        "php":                                     "^7.2.5",
         "ext-curl":                                "*",
         "ext-json":                                "*",
         "ext-zip":                                 "*",
@@ -61,6 +61,7 @@
         "symfony/asset":                           "~4.4.1",
         "symfony/translation":                     "~4.4.1",
         "symfony/workflow":                        "^4.4.1",
+        "symfony/string":                          "^5.0",
         "symfony-cmf/routing":                     "^2.1.0",
         "twig/twig":                               "2.*",
         "twig/extensions":                         "~1.5.4",
