--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,24 @@
 version: "3"
 services:
     # Test services
+    app:
+        build:
+            #context: ./docker/php72-nginx-alpine
+            #context: ./docker/php73-nginx-alpine
+            context: ./docker/php74-nginx-alpine
+            args:
+                USER_UID: ${USER_UID}
+        ports:
+            - ${APP_PORT}:80/tcp
+        depends_on:
+            - db
+            - solr
+        volumes:
+            - ./:/var/www/html:consistent
+        environment:
+            USE_APP_CACHE: ${USE_APP_CACHE}
+            USER_UID: ${USER_UID}
+            DEFAULT_GATEWAY: ${DEFAULT_GATEWAY}
     db:
         image: postgres:12.1
         environment:
@@ -17,5 +35,21 @@ services:
         ports:
             - 8090:8080
 
+    solr:
+        image: solr
+        ports:
+            - "${SOLR_PORT}:8983/tcp"
+        volumes:
+            - solr_data:/opt/solr/server/solr/mycores
+        entrypoint:
+            - docker-entrypoint.sh
+            - solr-precreate
+            - roadiz
+
+    mailer:
+        image: mailhog/mailhog
+        ports:
+            - ${MAILER_PORT}:8025/tcp
 volumes:
     db_data:
+    solr_data:
