--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,8 @@
         "jms/serializer":                          "^2.3.0 || ^3.1.1",
         "rollerworks/password-strength-validator": "^1.1",
         "gedmo/doctrine-extensions":               "^2.4",
-        "rezozero/crypto":                         "^0.1.0"
+        "rezozero/crypto":                         "^0.1.0",
+        "ecodev/graphql-doctrine": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27",
